adding a new change to a inital commit file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li>Git init</li>
             <li>git config</li>
+            <li>git commit</li>
         </ul>
     </div>
 </body>
